[gd_scene load_steps=8 format=2]

[ext_resource path="res://img/ADOBEFANHEITISTD-BOLD.OTF" type="DynamicFontData" id=1]
[ext_resource path="res://Seekbar.gd" type="Script" id=2]
[ext_resource path="res://img/progressbar.png" type="Texture" id=3]
[ext_resource path="res://img/pause_btn.png" type="Texture" id=4]
[ext_resource path="res://img/seekbar.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
extra_spacing_char = 1
extra_spacing_space = -1
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Seekbar" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="ProgressSprite" type="Sprite" parent="."]
position = Vector2( 17, 24 )
scale = Vector2( 1e-05, 1 )
texture = ExtResource( 3 )
centered = false

[node name="Label" type="Label" parent="."]
margin_left = 338.0
margin_top = 18.0
margin_right = 413.0
margin_bottom = 33.0
theme = SubResource( 2 )
text = "0:00 / 2:45"

[node name="PauseSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 430, 25 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
